--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <html>
-<head>
-  <title>npm | the ❤ of the modern development community</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"type="text/css" />
-  <link rel="stylesheet" href="css/components/bootstrap-grid.css" type="text/css" />
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
 
+<head>
+    <title>npm | the ❤ of the modern development community</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/bootstrap-grid.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
 <body>
+    <div class="container">
+
+        <nav>
+            <p><span class="heart-icon">❤</span> ninieties Party Mix</p>
+            <ul>
+                <li>npm Enterprise</li>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Docs</li>
+                <li>Support</li>
+            </ul>
+            <div class="clearfix"></div>
+        </nav>
+    </div>
+
+    <hr>
+
+    <header>
+        <div class="">
+            <img src="images/logo.png" width="100px;" alt="npm logo" />
+            <div class="search-bar">
+                <i class="fas fa-search"></i>
+                <input type="text" placeholder="Search packages">
+            </div>
+        </div>
+        <div class="">
+            <a href="#">login </a>or
+            <a href="#">signup</a>
+        </div>
+    </header>
+    </div>
+</body>
+
+</html>
