--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
     </div>
 
     <hr>
-
-    <header>
-        <div class="">
-            <img src="images/logo.png" width="100px;" alt="npm logo" />
-            <div class="search-bar">
+    <div class="container">
+        <div class="header col-md-12">
+            <img src="images/logo.png" width="80px;" alt="npm logo" />
+            <div class="search-bar col-md-8">
                 <i class="fas fa-search"></i>
                 <input type="text" placeholder="Search packages">
             </div>
+            <div class="login col-md-2">
+                <a href="#">login </a>or
+                <a href="#">signup</a>
+            </div>
         </div>
-        <div class="">
-            <a href="#">login </a>or
-            <a href="#">signup</a>
-        </div>
-    </header>
+
     </div>
 </body>
 
