NPM Orgs Section Added

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav>
             <p><span class="heart-icon">❤</span> ninieties Party Mix</p>
             <ul>
-                <li>npm Enterprise</li>
-                <li>Features</li>
-                <li>Pricing</li>
-                <li>Docs</li>
-                <li>Support</li>
+                <li> <a href="#">npm Enterprise</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Docs</a></li>
+                <li><a href="#">Support</a></li>
             </ul>
             <div class="clearfix"></div>
         </nav>
@@ -41,6 +41,30 @@
         </div>
 
     </div>
+    <div class="clearfix"></div>
+    <section class="signup">
+        <div class="container">
+            <h1>Build amazing things</h1>
+            <p>npm is the package manager for JavaScript and the world's largest software registry. Discover packages of
+                reusable code and assemble them in powerful new ways.</p>
+            <a href="#">Sign up</a>
+        </div>
+    </section>
+    <section class="npm-orgs">
+        <div class="container">
+            <img src="images/collaboration-security.svg" width="30%" />
+            <div class="npm-orgs-desc">
+                <p class="npm-orgs-title">npm Orgs is powerful collaboration for free</p>
+                <ul>
+                    <li>Encorage code discovery and re-use within teams</li>
+                    <li>Publish and control accsess to your own namespace</li>
+                    <li>Manage public and private code with the same workflow</li>
+                    </ul>
+                <a href="#">Sign up</a>
+                <p>or,Learn more about Orgs</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
